--- a/Timetable/timetable.html
+++ b/Timetable/timetable.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <table class="time" width=350 height="500" style="border-collapse: collapse; border-radius: 10px;">
+    <table width=350 height="500" style="border-collapse: collapse; border-radius: 10px;">
         <tr height=5%>
             <th></th>
             <th>월</th>
@@ -43,7 +43,7 @@
             <td></td>
         </tr>
         <tr style="height: 1px;">
-            <th  style="border-bottom-color: transparent;"></th>
+            <th style="border-bottom-color: transparent;"></th>
             <th style="border-bottom-color: transparent;"></th>
             <th style="border-bottom-color: transparent;"></th>
         </tr>
