--- a/Timetable/timetable.html
+++ b/Timetable/timetable.html
@@ -23,14 +23,13 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
+            <td style="background-color: #9ec0ec">데이터베이스</td>
             <td></td>
         </tr>
         <tr>
             <th>12</th>
             <td style="background-color: #fad0a0">인공지능</td>
             <td></td>
-            <td style="background-color: #9ec0ec">데이터베이스</td>
             <td></td>
             <td></td>
         </tr>
@@ -39,7 +38,7 @@
             <td rowspan="2" style="border-bottom-color: transparent; background-color: #d0e9a8">알고리즘</td>
             <td></td>
             <td rowspan="2" style="border-bottom-color: transparent; background-color: #a0e2d5">운영체제</td>
-            <td rowspan="2" style="border-bottom-color: transparent; background-color: #dea2f0">디지털콘텐츠기획</td>
+            <td rowspan="2" style="border-bottom-color: transparent; background-color: #dea2f0">자료구조</td>
             <td></td>
         </tr>
         <tr style="height: 1px;">
