--- a/Timetable/timetable.html
+++ b/Timetable/timetable.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <table width=350 height="500" style="border-collapse: collapse; border-radius: 10px;">
+    <table width=350 height=500 style="border-collapse: collapse; border-radius: 10px;">
         <tr height=5%>
             <th></th>
             <th>월</th>
@@ -15,36 +15,32 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
+            <td style="background-color: #9ec0ec">DB</td>
             <td></td>
         </tr>
         <tr>
             <th>11</th>
+            <td style="background-color: #fad0a0">인공지능</td>
             <td></td>
             <td></td>
             <td></td>
-            <td style="background-color: #9ec0ec">데이터베이스</td>
             <td></td>
         </tr>
         <tr>
             <th>12</th>
-            <td style="background-color: #fad0a0">인공지능</td>
+            <td></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <th>1</th>
-            <td rowspan="2" style="border-bottom-color: transparent; background-color: #d0e9a8">알고리즘</td>
+            <td style="background-color: #d0e9a8">알고리즘</td>
             <td></td>
-            <td rowspan="2" style="border-bottom-color: transparent; background-color: #a0e2d5">운영체제</td>
-            <td rowspan="2" style="border-bottom-color: transparent; background-color: #dea2f0">자료구조</td>
+            <td style="background-color: #a0e2d5">운영체제</td>
+            <td style="background-color: #dea2f0">자료구조</td>
             <td></td>
-        </tr>
-        <tr style="height: 1px;">
-            <th style="border-bottom-color: transparent;"></th>
-            <th style="border-bottom-color: transparent;"></th>
-            <th style="border-bottom-color: transparent;"></th>
         </tr>
         <tr>
             <th>2</th>
@@ -66,14 +62,14 @@
         td {
             font-size: small;
             width: 60px;
-            height: 5px;
-        }
-        tr, th, td { 
-            padding: 5px;
-            text-align: center;
+
             /* 둥글게 만들기 */
             border-top-left-radius: 15px; border-top-right-radius: 15px;
             border-bottom-left-radius: 15px; border-bottom-right-radius: 15px;
+        }
+        th, td { 
+            padding: 5px;
+            text-align: center;
 
             border-style: solid;
             border-color: #4562;
